avoid flicker

--- a/2048/web/style/main.css
+++ b/2048/web/style/main.css
@@ -218,52 +218,68 @@ hr {
   line-height: 116.25px; }
 .tile.tile-position-1-1 {
   -webkit-transform: translate(0px, 0px);
-  transform: translate(0px, 0px); }
+  transform: translate(0px, 0px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-1-2 {
   -webkit-transform: translate(0px, 121px);
-  transform: translate(0px, 121px); }
+  transform: translate(0px, 121px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-1-3 {
   -webkit-transform: translate(0px, 242px);
-  transform: translate(0px, 242px); }
+  transform: translate(0px, 242px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-1-4 {
   -webkit-transform: translate(0px, 363px);
-  transform: translate(0px, 363px); }
+  transform: translate(0px, 363px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-2-1 {
   -webkit-transform: translate(121px, 0px);
-  transform: translate(121px, 0px); }
+  transform: translate(121px, 0px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-2-2 {
   -webkit-transform: translate(121px, 121px);
-  transform: translate(121px, 121px); }
+  transform: translate(121px, 121px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-2-3 {
   -webkit-transform: translate(121px, 242px);
-  transform: translate(121px, 242px); }
+  transform: translate(121px, 242px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-2-4 {
   -webkit-transform: translate(121px, 363px);
-  transform: translate(121px, 363px); }
+  transform: translate(121px, 363px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-3-1 {
   -webkit-transform: translate(242px, 0px);
-  transform: translate(242px, 0px); }
+  transform: translate(242px, 0px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-3-2 {
   -webkit-transform: translate(242px, 121px);
-  transform: translate(242px, 121px); }
+  transform: translate(242px, 121px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-3-3 {
   -webkit-transform: translate(242px, 242px);
-  transform: translate(242px, 242px); }
+  transform: translate(242px, 242px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-3-4 {
   -webkit-transform: translate(242px, 363px);
-  transform: translate(242px, 363px); }
+  transform: translate(242px, 363px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-4-1 {
   -webkit-transform: translate(363px, 0px);
-  transform: translate(363px, 0px); }
+  transform: translate(363px, 0px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-4-2 {
   -webkit-transform: translate(363px, 121px);
-  transform: translate(363px, 121px); }
+  transform: translate(363px, 121px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-4-3 {
   -webkit-transform: translate(363px, 242px);
-  transform: translate(363px, 242px); }
+  transform: translate(363px, 242px);
+  -webkit-backface-visibility: hidden; }
 .tile.tile-position-4-4 {
   -webkit-transform: translate(363px, 363px);
-  transform: translate(363px, 363px); }
+  transform: translate(363px, 363px);
+  -webkit-backface-visibility: hidden; }
 
 .tile {
   position: absolute;
